# docs/swagger.json
@@ -35,7 +35,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.ResponseJson"
+                            "$ref": "#/definitions/response.ResponseJsons"
                         }
                     },
                     "442": {
@@ -198,7 +198,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.ResponseJson"
+                            "$ref": "#/definitions/response.ResponseJsons"
                         }
                     },
                     "442": {
@@ -250,7 +250,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.ResponseJson"
+                            "$ref": "#/definitions/response.ResponseJsons"
                         }
                     },
                     "442": {
@@ -270,6 +270,21 @@
         }
     },
     "definitions": {
+        "response.ResponseArrayJson": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "payload": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "additionalProperties": true
+                    }
+                }
+            }
+        },
         "response.ResponseJson": {
             "type": "object",
             "properties": {
@@ -279,6 +294,20 @@
                 "data": {
                     "type": "object",
                     "additionalProperties": true
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.ResponseJsons": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/response.ResponseArrayJson"
                 },
                 "msg": {
                     "type": "string"
